# geomedea

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html
.github/workflows/: pages.yml  test.yml
benches/: file_read.rs  http_read.rs  write_from_geojson.rs
examples/maplibre/: filtered.html  index.html  large.html
geomedea/: CHANGES.md  Cargo.toml  README.md
geomedea-wasm/: .gitignore  Cargo.toml
geomedea-wasm/src/: lib.rs  to_geo_type.rs
geomedea-wasm/web_root/examples/: site.css
geomedea-wasm/web_root/examples/maplibre/: large.html
geomedea-wasm/web_root/files/: test_fixtures
geomedea/benches/: file_read.rs  http_read.rs  write_from_geojson.rs
geomedea/src/: bounds.rs  error.rs  feature.rs  format.rs  http_reader.rs  inspector.rs  lib.rs  reader.rs  test_data.rs  wkt.rs  writer.rs
geomedea/src/geometry/: bounded.rs  mod.rs
geomedea/src/io/: counting_writer.rs  mod.rs
geomedea/src/io/async_ruszstd/: mod.rs
geomedea/src/packed_r_tree/: mod.rs  reader.rs  writer.rs
geomedea/src/writer/: mod.rs
geomedea_geozero/: CHANGES.md  Cargo.toml
geomedea_geozero/src/: geozero_reader.rs  geozero_writer.rs  lib.rs
js/geomedea/: README.md  geomedea.d.ts  geomedea.js  geomedea_bg.wasm  geomedea_bg.wasm.d.ts  geomedea_wasm.d.ts  geomedea_wasm.js  geomedea_wasm_bg.wasm  geomedea_wasm_bg.wasm.d.ts  package.json
src/: bounds.rs  feature.rs  hilbert.rs  http_reader.rs  inspector.rs  lib.rs  reader.rs  test_data.rs  writer.rs
src/geometry/: relative_eq.rs
src/io/: counting_reader.rs  counting_writer.rs
src/packed_r_tree/: mod.rs  reader.rs  writer.rs
