[package]
name = "geomedea"
version = "0.2.1"
edition = "2021"
description = "a geospatial data format optimized for remotely accessing a subset of planet-wide data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/michaelkirk/geomedea"

[[bin]]
name = "info"
path = "src/bin/info.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
log = "0.4.20"
memmap2 = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
zstd = "0.12.4"
streaming-http-range-client = "0.1.1"
futures-util = "0.3.29"
tokio = { version = "1.34.0", default-features = false }
async-stream = "0.3.5"
bytes = { version = "1.5.0", features = [] }
byteorder = "1.5.0"
async-compression = { version = "0.4.4", features = ["zstd", "tokio"] }
async-trait = "0.1.74"

[dev-dependencies]
geomedea_geozero = { path = "../geomedea_geozero" }
geozero = { workspace = true }
serde_json = "1.0.107"
approx = "0.5.1"
env_logger = "0.10.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.34.0", default-features = true, features = ["full"] }
yocalhost = "0.4.0"

[[bench]]
name = "write_from_geojson"
harness = false

[[bench]]
name = "file_read"
harness = false

[[bench]]
name = "http_read"
harness = false

