[package]
name = "geomedea"
version = "0.3.0-beta.2"
edition = "2021"
description = "a geospatial data format optimized for remotely accessing a subset of planet-wide data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/michaelkirk/geomedea"

[[bin]]
name = "info"
path = "src/bin/info.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# NOTE: `writer` is not supported on wasm, use no-default-features on that target. See the `geomedea-wasm` crate.
default = ["writer"]
writer = ["zstd"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
log = "0.4.20"
memmap2 = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.8.0"
thiserror = "2.0.12"
zstd = {  version = "0.13.3", optional = true }
streaming-http-range-client = { version = "1.0.1" }
futures-util = { version = "0.3.29", default-features = false }
tokio = { version = "1.34.0", default-features = false }
async-stream = "0.3.5"
bytes = { version = "1.5.0", default-features = false }
byteorder = "1.5.0"
async-compression = { version = "0.4.4", default-features = false, features = ["futures-io", "tokio"], git = "https://github.com/michaelkirk/async-compression", branch = "mkirk/external-decoder" }
async-trait = "0.1.74"
ruzstd = "0.8.0"

[dev-dependencies]
geomedea_geozero = { path = "../geomedea_geozero", default-features = false }
serde_json = "1.0.107"
approx = "0.5.1"
env_logger = "0.11.8"
criterion = { version = "0.6.0", features = ["async_tokio"] }
tokio = { version = "1.34.0", default-features = true, features = ["full"] }
yocalhost = "0.5.0"

[[bench]]
name = "write_from_geojson"
harness = false

[[bench]]
name = "file_read"
harness = false

[[bench]]
name = "http_read"
harness = false

