[package]
name = "geomedea_geozero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
geomedea = { version = "0.2.0", path = "../geomedea" }
# Waiting for release
geozero = '*'
log = "0.4.20"

[dev-dependencies]
approx = "0.5.1"
serde_json = "1.0.108"


