[package]
name = "geomedea_geozero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["writer"]
writer = ["geomedea/writer"]

[dependencies]
futures-util = "0.3.29"
geomedea = { version = "0.3.0-beta.2", path = "../geomedea", default-features = false }
# Waiting for release
geozero = '0.13.0'
log = "0.4.20"

[dev-dependencies]
approx = "0.5.1"
serde_json = "1.0.108"


